css/nav.css
#nav
{
   width: 100%;
   height: 50px;
   z-index: 10;
   background-color: white;
   position: fixed;
   top: 0;
   text-align: center;
}
	
#nav #logo
{
	background-image: url(../img/logo/full-transp-black.png);
	background-size: cover !important;
	background-position: center center !important;
	background-repeat: no-repeat;
	height: 40px;
	width: 104px;
	top: 50%;
	left: 50%;
	-webkit-transform:translate(-50%, -50%);
    -moz-transform:translate(-50%, -50%);
    -o-transform:translate(-50%, -50%);
	transform: translate(-50%, -50%);
	display: block;
	position: absolute;
	z-index: 11;
	
}
#outerburger
{
	display: block;
	position:absolute;
	top:0;
	right:0;
	cursor:pointer;
	z-index:11;
	margin:10px;
	height:30px;
	width: 30px;
	color:black;
}
.menu.icon {
	position: absolute;
	margin-top: 13px;
	width: 30px;
	height: 4px;
	background-color: currentColor;
}
.menu.icon:before {
	position: absolute;
	top: -12px;
	left: 0;
	width: 30px;
	height: 4px;
	background-color: currentColor;
}
.menu.icon:after {
	position: absolute;
	top: 12px;
	left: 0;
	width: 30px;
	height: 4px;
	background-color: currentColor;
}
.close.icon {
	position: absolute;
	margin: 0;
	width: 30px;
	height: 30px;
}
.close.icon:before {
	position: absolute;
	top: 13px;
	left:-5px;
	width: 40px;
	height: 4px;
	background-color: currentColor;
	-webkit-transform: rotate(-45deg);
	transform: rotate(-45deg);
}
.close.icon:after {
	position: absolute;
	top: 13px;
	left:-5px;
	width: 40px;
	height: 4px;
	background-color: currentColor;
	-webkit-transform: rotate(45deg);
	transform: rotate(45deg);
}
.icon, .icon:before, .icon:after
	{transition: all 0.7s;}


#menu 
{
	position:fixed;
	top: 49px;
	z-index:10; 
	width:100%;
	height: 100%;
	font-weight:bold;
	font-size:18px;
	text-align: center;
	background-color: white;
	opacity:0;
	filter: alpha(opacity=0); /* old ie */
	visibility: hidden;
	-webkit-transition: visibility 0s 0.7s, opacity 0.7s;
	-moz-transition: visibility 0s 0.7s, opacity 0.7s;
	-ms-transition:visibility 0s 0.7s, opacity 0.7s;
	-o-transition:visibility 0s 0.7s, opacity 0.7s;
	transition: visibility 0s 0.7s, opacity 0.7s;
	text-shadow: 1px 1px 5px rgba(150, 150, 150, 1);
}
#menu.menu-active
{
	opacity:1;
	filter: alpha(opacity=100); /* old ie */
	visibility: visible;
	-webkit-transition: visibility 0s, opacity 0.7s;
	-moz-transition: visibility 0s, opacity 0.7s;
	-ms-transition:visibility 0s, opacity 0.7s;
	-o-transition:visibility 0s, opacity 0.7s;
	transition: visibility 0s, opacity 0.7s;
}
#menu>ul
{
	height: 100%;
	width: 100%;
	list-style-type:none;
	margin: 0;
	padding: 0;
}

#menu>ul>li
{
	height: calc(20% - 10px);
	padding:0;
	margin: 0 -2px 0 -2px;
}
#nav ul>li>a
{
	position: relative;
	color: black;
	background-color:transparent;
	height: 100%;
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	transition: 0.5s;
}
#nav ul>li>a:hover
{
	color: white;
	opacity: 1!important;
	font-size: 110%;
	background-color: black;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-ms-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
}
#nav ul>li>a.current
{
	color: white;
	background-color: black;
	opacity: 0.9;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-ms-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
}

#nojs-menu
{
	position:fixed;
	top: 49px;
	z-index:11; 
	width:100%;
	font-weight:bold;
	font-size:18px;
	text-align: center;
	background-color: white;
}
#nojs-menu>ul
{
	height: 150px;
	width: 100%;
	list-style-type:none;
	margin: 0;
	padding: 0;
}

#nojs-menu>ul>li
{
	display: block;
	height: 20%;
	padding:0;
	margin: 0;
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
	
	#nav
	{
		height: 80px;
		background-color:transparent;
		-webkit-transition: 0.5s;
		-moz-transition: 0.5s;
		-ms-transition: 0.5s;
		-o-transition: 0.5s;
		transition: 0.5s;
	}
	#nav:hover,
	#nav.nav-active
	{
		background-color:white;
	}
	
	#nav #logo
	{
		height: 50px;
		width: 130px;
		left:20px;
		top: 50%;
		-webkit-transform: translate(0, -50%);
		-moz-transform: translate(0, -50%);
		-o-transform: translate(0, -50%);
		transform: translate(0, -50%);
	}

	#menu
	{
		visibility: visible;
		opacity: 1;
		position: relative;
		top: 0;
		height: 80px;
		width: 100%;
		background: none;
	}

	#menu>ul>li
	{
		display: inline-block;
		height: 100%;
		width: 140px;
	}

	#menu>ul>li>a
	{
		padding: 0 15px;
	}
	
	#hamburger
		{display: none!important}
	#cross
		{display: none!important}
		
	
	#nav ul>li>a.current
	{
		position: relative;
		color: black;
		background-color:transparent;
		height: 100%;
		width: 100%;
		display: flex;
		align-items: center;
		justify-content: center;
		text-align: center;
		transition: 0.5s;
	}
	#nav ul>li>a:hover
	{
		color: white;
		opacity: 1!important;
		font-size: 110%;
		background-color: black;
		-webkit-transition: 0.5s;
		-moz-transition: 0.5s;
		-ms-transition: 0.5s;
		-o-transition: 0.5s;
		transition: 0.5s;
	}
	#nav:hover ul>li>a.current,
	#nav.nav-active ul>li>a.current
	{
		color: white;
		background-color: black;
		opacity: 0.9;
		-webkit-transition: 0.5s;
		-moz-transition: 0.5s;
		-ms-transition: 0.5s;
		-o-transition: 0.5s;
		transition: 0.5s;
	}
	#nojs-menu
		{display: none}
} 

